separate facial clustering job
