# server/immich-openapi-specs.json
@@ -6495,6 +6495,12 @@
           "backgroundTask": {
             "$ref": "#/components/schemas/JobStatusDto"
           },
+          "faceDetection": {
+            "$ref": "#/components/schemas/JobStatusDto"
+          },
+          "facialRecognition": {
+            "$ref": "#/components/schemas/JobStatusDto"
+          },
           "library": {
             "$ref": "#/components/schemas/JobStatusDto"
           },
@@ -6535,7 +6541,8 @@
           "migration",
           "backgroundTask",
           "search",
-          "recognizeFaces",
+          "faceDetection",
+          "facialRecognition",
           "sidecar",
           "library"
         ],
@@ -7818,7 +7825,8 @@
           "thumbnailGeneration",
           "metadataExtraction",
           "videoConversion",
-          "recognizeFaces",
+          "faceDetection",
+          "facialRecognition",
           "smartSearch",
           "backgroundTask",
           "storageTemplateMigration",
@@ -9187,6 +9195,12 @@
           "backgroundTask": {
             "$ref": "#/components/schemas/JobSettingsDto"
           },
+          "faceDetection": {
+            "$ref": "#/components/schemas/JobSettingsDto"
+          },
+          "facialRecognition": {
+            "$ref": "#/components/schemas/JobSettingsDto"
+          },
           "library": {
             "$ref": "#/components/schemas/JobSettingsDto"
           },
@@ -9194,9 +9208,6 @@
             "$ref": "#/components/schemas/JobSettingsDto"
           },
           "migration": {
-            "$ref": "#/components/schemas/JobSettingsDto"
-          },
-          "recognizeFaces": {
             "$ref": "#/components/schemas/JobSettingsDto"
           },
           "search": {
@@ -9223,7 +9234,8 @@
           "migration",
           "backgroundTask",
           "search",
-          "recognizeFaces",
+          "faceDetection",
+          "facialRecognition",
           "sidecar",
           "library"
         ],
